concord_macros/tests/dsl/fail/fail_oauth2_token_url_invalid.stderr
error: invalid OAuth2 token URL: relative URL without a base
  --> tests/dsl/fail/fail_oauth2_token_url_invalid.rs:12:28
   |
12 |                 token_url: "not a url",
   |                            ^^^^^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_oauth2_token_url_invalid.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
